FEAT: Added hotwire to index for update, create and destroy

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Twitter</h1>
+<h1>Tweeter</h1>
+
+<%= turbo_stream_from "tweets" %>
 
 <%= render "tweets/form", tweet: @tweet %>
 
-<%= render @tweets %>
+<%= turbo_frame_tag "tweets" do %>
+  <%= render @tweets %>
+<% end %>
