--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,10 +1,12 @@
-<div class="border p-4 m-3">
-  <div><%= tweet.body %></div>
+<%= turbo_frame_tag dom_id(tweet) do %>
+  <div class="border p-4 m-3">
+    <div><%= tweet.body %></div>
 
-  <div class="mt-2">
-    <%= button_to "Likes (0)", tweet_like_path(tweet), method: :post %>
-    <%= button_to "Retweets (0)", tweet_retweet_path(tweet), method: :post %>
+    <div class="mt-2">
+      <%= button_to "Likes (0)", tweet_like_path(tweet), method: :post %>
+      <%= button_to "Retweets (0)", tweet_retweet_path(tweet), method: :post %>
 
-    <%= link_to "Edit", edit_tweet_path(tweet) %>
+      <%= link_to "Edit", edit_tweet_path(tweet) %>
+    </div>
   </div>
-</div>
+<% end %>
