--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Tweet</h1>
 
-<div class="card card-body">
+<div class="border p-4 m-3">
   <%= render 'form', tweet: @tweet %>
   <%= link_to "Cancel", @tweet %>
 </div>
