--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -3,8 +3,8 @@
     <div><%= tweet.body %></div>
 
     <div class="mt-2">
-      <%= button_to "Likes (0)", tweet_like_path(tweet), method: :post %>
-      <%= button_to "Retweets (0)", tweet_retweet_path(tweet), method: :post %>
+      <%= button_to "Likes (#{tweet.likes_count})", tweet_like_path(tweet), method: :post %>
+      <%= button_to "Retweets (#{tweet.retweets_count})", tweet_retweet_path(tweet), method: :post %>
 
       <%= link_to "Edit", edit_tweet_path(tweet) %>
     </div>
